--- a/src/index.css
+++ b/src/index.css
@@ -49,14 +49,14 @@ code {
   padding: 40px;
 }
 
-.meme form {
+.meme div {
   padding-top: 100px;
   display: grid;
   grid-template: 40px 40px/ 1fr 1fr;
   gap: 17px;
 }
 
-.meme form input {
+.meme div input {
   padding: 30px;
   border-radius: 5px;
   font-family: "Karla", sans-serif;
@@ -66,7 +66,7 @@ code {
   text-indent: 5px;
 }
 
-.meme form button {
+.meme div button {
   background: linear-gradient(90.41deg, #711f8d 1.14%, #a818da 100%);
   border-radius: 5px;
   border: none;
