--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,10 @@ code {
     monospace;
 }
 
+main {
+  position: relative;
+}
+
 .header {
   width: 100%;
   height: 85px;
@@ -80,10 +84,44 @@ code {
   cursor: pointer;
 }
 
+
 .meme img {
-  width: 677px;
-  height: auto;
-  margin: 0 auto;
+  width: 80%;
   display: block;
-  margin-top: 70px;
+  margin: 60px auto;
+  border-radius: 10px;
+}
+
+.image-text {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 100px 0;
+  padding: 0 5px;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 3rem;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000,
+        -2px -2px 0 #000,
+        2px -2px 0 #000,
+        -2px 2px 0 #000,
+        0 2px 0 #000,
+        2px 0 0 #000,
+        0 -2px 0 #000,
+        -2px 0 0 #000,
+        2px 2px 5px #000;;
+}
+
+.top {
+  top: 0;
+  margin-top: 350px;
+}
+
+.bottom {
+  bottom: 0;
+  margin-top: 400px;
 }
